Fixed the like button on mobile.

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,13 +45,15 @@
 
 .card__like {
   margin-left: auto;
+  background-color: transparent;
   background-image: url(../images/like-icon.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   opacity: 0.4;
   width: 23px;
   height: 20px;
   cursor: pointer;
   border: none;
-  background-color: transparent;
 }
 
 .card__like:hover {
